--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <!-- Remplacer le fichier d'image favicon par celui correspondant à votre appli -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Raleway&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Brève description de l'application Web" />
+    <meta name="description" content="Portfolio - Kevin PM" />
     <title>Kevin Ponce Mélendez</title>
   </head>
   <body>
